--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
+.App{
   text-align: center;
+  margin: 5% 20%;
+  padding-top: 100px;
+  background-color: rgb(236, 212, 212);
+  height: 200px;
+  border-radius: 20px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btnStyle {
+  background-color: #a9a9a9;
+  color: black;
+  width: 20%;
+  font-size: 35px;
+  margin-right: 20px;
+  border: none;
+  border-radius: 7px;
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1{
+  margin-left: 220px;
+  border: 1px solid black;
+  width: 300px;
+  border-radius: 20px;
+  margin-bottom: 30px;
 }
